--- a/plugins/chain_api_plugin/CMakeLists.txt
+++ b/plugins/chain_api_plugin/CMakeLists.txt
@@ -4,4 +4,4 @@ add_library( chain_api_plugin
              ${HEADERS} )
 
 target_link_libraries( chain_api_plugin chain_plugin http_plugin appbase )
-target_include_directories( chain_api_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_include_directories( chain_api_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" ${CMAKE_CURRENT_SOURCE_DIR}/../plugins_common/include/)
