--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,8 @@ endif()
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libraries/fc/CMakeModules")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 
-if (UNIX)
-   if (APPLE)
-      execute_process(COMMAND xcrun --show-sdk-path
-                      OUTPUT_VARIABLE CMAKE_OSX_SYSROOT
-                      OUTPUT_STRIP_TRAILING_WHITESPACE)
-      list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/llvm@4")
-      list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/gettext")
-   endif()
+if (UNIX AND APPLE)
+   list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/llvm@4" "/usr/local/opt/gettext")
 endif()
 
 include( GNUInstallDirs )
