Add named_thread_pool to reduce duplicated code

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -44,9 +44,9 @@ add_library( eosio_chain
 #             global_property_object.cpp
 #
 #             contracts/chain_initializer.cpp
-
-
+        
              transaction_metadata.cpp
+             thread_utils.cpp
              ${HEADERS}
              )
 
