Add git submodule regression check
* Add submodule_check.sh, which checks to see if the HEAD of any
  submodules on a pull-requested branch are older than they were
  previously.
* Add the corresponding buildkite pipeline to run submodule_check.sh.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,14 @@
 steps:
 
   - command: |
+        echo "+++ :microscope: Running git submodule regression check" && \
+        ./scripts/submodule_check.sh
+    label: "Git submodule regression check"
+    agents:
+      queue: "automation-large-builder-fleet"
+    timeout: 240
+
+  - command: |
         echo "+++ :hammer: Building"
         ./scripts/eosio_build.sh -y
         echo "--- :compression: Compressing build directory"
