Add git submodule regression check
* Add submodule_check.sh, which checks to see if the HEAD of any
  submodules on a pull-requested branch are older than they were
  previously.
* Add the corresponding buildkite pipeline to run submodule_check.sh.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -614,3 +614,11 @@ steps:
       - "build/packages/eosio_highsierra.rb"
       - "build/packages/eosio.rb"
     timeout: 60
+
+  - command: |
+        echo "+++ :microscope: Running git submodule regression check" && \
+        ./scripts/submodule_check.sh
+    label: "Git submodule regression check"
+    agents:
+      queue: "automation-large-builder-fleet"
+    timeout: 240
