--- a/contracts/eosio.system/CMakeLists.txt
+++ b/contracts/eosio.system/CMakeLists.txt
@@ -2,8 +2,7 @@ file(GLOB ABI_FILES "*.abi")
 configure_file("${ABI_FILES}" "${CMAKE_CURRENT_BINARY_DIR}" COPYONLY)
 
 add_wast_executable(TARGET eosio.system
-        INCLUDE_FOLDERS "${STANDARD_INCLUDE_FOLDERS}"
-        LIBRARIES libc++ libc eosiolib eosio.token
-        DESTINATION_FOLDER ${CMAKE_CURRENT_BINARY_DIR}
-        )
-
+  INCLUDE_FOLDERS ${STANDARD_INCLUDE_FOLDERS}
+  LIBRARIES libc++ libc eosiolib eosio.token
+  DESTINATION_FOLDER ${CMAKE_CURRENT_BINARY_DIR}
+)
