use eosio.depman

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,19 @@ elseif ("${CMAKE_INSTALL_PREFIX}" STREQUAL "/usr/local")
 endif()
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/libraries/fc/CMakeModules")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/scripts/eosio.depman/modules")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules")
 
-if (UNIX AND APPLE)
-   list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/llvm@4" "/usr/local/opt/gettext")
-endif()
+#if (UNIX AND APPLE)
+#   list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/llvm@4" "/usr/local/opt/gettext")
+#endif()
 
 include( GNUInstallDirs )
 include( VersionMacros )
 include( SetupTargetMacros )
 include( InstallDirectoryPermissions )
 include( MASSigning )
+include( eosio.depman )
 
 set( BLOCKCHAIN_NAME "EOSIO" )
 set( CMAKE_CXX_STANDARD 14 )
@@ -68,20 +70,28 @@ set(BUILD_DOXYGEN FALSE CACHE BOOL "Build doxygen documentation on every make")
 set(BUILD_MONGO_DB_PLUGIN FALSE CACHE BOOL "Build mongo database plugin")
 
 # add defaults for openssl
-if ("${OPENSSL_ROOT_DIR}" STREQUAL "")
-   if (NOT "$ENV{OPENSSL_ROOT_DIR}" STREQUAL "")
-      set(OPENSSL_ROOT_DIR $ENV{OPENSSL_ROOT_DIR})
-      set(OPENSSL_INCLUDE_DIR ${OPENSSL_ROOT_DIR}/include)
-   elseif (APPLE)
-      set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
-      set(OPENSSL_INCLUDE_DIR "/usr/local/opt/openssl/include")
-   elseif(UNIX AND NOT APPLE)
-      set(OPENSSL_ROOT_DIR "/usr/include/openssl")
-      set(OPENSSL_INCLUDE_DIR "/usr/include/openssl/include")
-   else()
-      message(FATAL_ERROR "openssl not found and don't know where to look, please specify OPENSSL_ROOT_DIR")
-   endif()
-endif()
+#if ("${OPENSSL_ROOT_DIR}" STREQUAL "")
+#   if (NOT "$ENV{OPENSSL_ROOT_DIR}" STREQUAL "")
+#      set(OPENSSL_ROOT_DIR $ENV{OPENSSL_ROOT_DIR})
+#      set(OPENSSL_INCLUDE_DIR ${OPENSSL_ROOT_DIR}/include)
+#   elseif (APPLE)
+#      set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
+#      set(OPENSSL_INCLUDE_DIR "/usr/local/opt/openssl/include")
+#   elseif(UNIX AND NOT APPLE)
+#      set(OPENSSL_ROOT_DIR "/usr/include/openssl")
+#      set(OPENSSL_INCLUDE_DIR "/usr/include/openssl/include")
+#   else()
+#      message(FATAL_ERROR "openssl not found and don't know where to look, please specify OPENSSL_ROOT_DIR")
+#   endif()
+#endif()
+
+### setup for external dependencies
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "boost")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "llvm4")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "gettext")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "openssl")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "libusb")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "libcurl")
 
 if(UNIX)
   if(APPLE)
