updated for eosio.depman

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,29 +69,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 set(BUILD_DOXYGEN FALSE CACHE BOOL "Build doxygen documentation on every make")
 set(BUILD_MONGO_DB_PLUGIN FALSE CACHE BOOL "Build mongo database plugin")
 
-# add defaults for openssl
-#if ("${OPENSSL_ROOT_DIR}" STREQUAL "")
-#   if (NOT "$ENV{OPENSSL_ROOT_DIR}" STREQUAL "")
-#      set(OPENSSL_ROOT_DIR $ENV{OPENSSL_ROOT_DIR})
-#      set(OPENSSL_INCLUDE_DIR ${OPENSSL_ROOT_DIR}/include)
-#   elseif (APPLE)
-#      set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl")
-#      set(OPENSSL_INCLUDE_DIR "/usr/local/opt/openssl/include")
-#   elseif(UNIX AND NOT APPLE)
-#      set(OPENSSL_ROOT_DIR "/usr/include/openssl")
-#      set(OPENSSL_INCLUDE_DIR "/usr/include/openssl/include")
-#   else()
-#      message(FATAL_ERROR "openssl not found and don't know where to look, please specify OPENSSL_ROOT_DIR")
-#   endif()
-#endif()
 
+check_dependencies(${CMAKE_SOURCE_DIR}/eosio.deps)
 ### setup for external dependencies
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "boost")
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "llvm4")
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "gettext")
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "openssl")
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "libusb")
-add_external_dependency(${CMAKE_SOURCE_DIR}/eosdeps "libcurl")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "boost")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "llvm4")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "gettext")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "openssl")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "libusb")
+add_external_dependency(${CMAKE_SOURCE_DIR}/eosio.deps "libcurl")
 
 if(UNIX)
   if(APPLE)
