--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "libraries/yubihsm"]
 	path = libraries/yubihsm
 	url = https://github.com/Yubico/yubihsm-shell
+[submodule "scripts/eosio.depman"]
+	path = scripts/eosio.depman
+	url = git@github.com:eosio/eosio.depman
