--- a/unittests/contracts.hpp.in
+++ b/unittests/contracts.hpp.in
@@ -41,6 +41,7 @@ namespace eosio {
          // Contracts in `eos/unittests/unittests/test-contracts' directory
          MAKE_READ_WASM_ABI(asserter,             asserter,             test-contracts)
          MAKE_READ_WASM_ABI(deferred_test,        deferred_test,        test-contracts)
+         MAKE_READ_WASM_ABI(get_sender_test,      get_sender_test,      test-contracts)
          MAKE_READ_WASM_ABI(noop,                 noop,                 test-contracts)
          MAKE_READ_WASM_ABI(payloadless,          payloadless,          test-contracts)
          MAKE_READ_WASM_ABI(proxy,                proxy,                test-contracts)
