--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,7 +3,8 @@ steps:
         # echo "+++ :hammer: Building"
         # ./scripts/eosio_build.sh -y
         # echo "--- :compression: Compressing build directory"
-        tar -pczf build.tar.gz2 build/; if [[ ! -f build.tar.gz ]]; then exit 1; fi;
+        #tar -pczf build.tar.gz2 build/; 
+        if [[ ! -f build.tar.gz ]]; then echo "No TAR Found!" && exit 1; fi;
     label: ":ubuntu: 16.04 Build"
     agents:
       queue: "automation-large-builder-fleet"
