Buildkite Docker plugin now adds variables on "Environment" tab to container

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -17,6 +17,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -38,6 +39,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -59,6 +61,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -80,6 +83,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -117,6 +121,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -137,6 +142,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
   
@@ -158,6 +164,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -178,6 +185,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -199,6 +207,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -219,6 +228,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -240,6 +250,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -260,6 +271,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -309,6 +321,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     env:
       OS: "ubuntu-16.04"
@@ -335,6 +348,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     env:
       OS: "ubuntu-18.04"
@@ -368,6 +382,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     env:
       OS: "el7"
