--- a/.buildkite/long_running_tests.yml
+++ b/.buildkite/long_running_tests.yml
@@ -17,6 +17,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -38,6 +39,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -59,6 +61,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -80,6 +83,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 60
 
@@ -116,6 +120,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 90
   
@@ -136,6 +141,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 90
 
@@ -156,6 +162,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 90
 
@@ -176,6 +183,7 @@ steps:
       docker#v2.1.0:
         debug: true
         image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-2"
+        propagate-environment: true
         workdir: /data/job
     timeout: 90
 
