--- a/programs/keosd/CMakeLists.txt
+++ b/programs/keosd/CMakeLists.txt
@@ -12,7 +12,9 @@ endif()
 configure_file(config.hpp.in config.hpp ESCAPE_QUOTES)
 
 if(EOSIO_PIN_COMPILER)
-   target_link_libraries(${KEY_STORE_EXECUTABLE_NAME} PRIVATE -nostdlib++)
+   if(NOT APPLE)
+      target_link_libraries(${KEY_STORE_EXECUTABLE_NAME} PRIVATE -nostdlib++)
+   endif()
 endif()
 
 target_link_libraries( ${KEY_STORE_EXECUTABLE_NAME}
