adjustments to unit test for RAM_RESTRICTIONS protocol feature

--- a/unittests/test-contracts/CMakeLists.txt
+++ b/unittests/test-contracts/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory( integration_test )
 add_subdirectory( noop )
 add_subdirectory( payloadless )
 add_subdirectory( proxy )
+add_subdirectory( ram_restrictions_test )
 add_subdirectory( reject_all )
 add_subdirectory( restrict_action_test )
 add_subdirectory( snapshot_test )
