I was wrong still need the special case for libstdc++

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -43,7 +43,11 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts.hpp.in ${CMAKE_CURRENT_BINA
 file(GLOB UNIT_TESTS "*.cpp") # find all unit test suites
 add_executable( unit_test ${UNIT_TESTS}) # build unit tests as one executable
 
-target_link_libraries( unit_test eosio_chain chainbase eosio_testing fc appbase ${PLATFORM_SPECIFIC_LIBS} )
+if(EOSIO_PIN_COMPILER AND NOT APPLE)
+   target_link_libraries(unit_test PRIVATE -nostdlib++ PUBLIC eosio_chain chainbase eosio_testing fc appbase ${PLATFORM_SPECIFIC_LIBS})
+else()
+   target_link_libraries( unit_test eosio_chain chainbase eosio_testing fc appbase ${PLATFORM_SPECIFIC_LIBS} )
+endif()
 
 target_compile_options(unit_test PUBLIC -DDISABLE_EOSLIB_SERIALIZE)
 target_include_directories( unit_test PUBLIC
