--- a/plugins/history_plugin/CMakeLists.txt
+++ b/plugins/history_plugin/CMakeLists.txt
@@ -4,4 +4,5 @@ add_library( history_plugin
              ${HEADERS} )
 
 target_link_libraries( history_plugin chain_plugin eosio_chain appbase )
-target_include_directories( history_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include" )
+target_include_directories( history_plugin PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
+                            "${CMAKE_CURRENT_SOURCE_DIR}/../chain_interface/include" )
